@@ -1,28 +1,30 @@
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '1.9.22'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.1'
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.android.tools.build:gradle:8.2.2'
+        classpath 'com.google.gms:google-services:4.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jlleitschuh.gradle:ktlint-gradle:10.3.0"
+        classpath 'org.jlleitschuh.gradle:ktlint-gradle:12.1.0'
     }
 }
 
 plugins {
-    id "org.jlleitschuh.gradle.ktlint" version "10.3.0"
-    id "io.gitlab.arturbosch.detekt" version "1.20.0"
-    id "io.snyk.gradle.plugin.snykplugin" version "0.4"
+    id 'com.google.devtools.ksp' version '1.9.22-1.0.17' apply false
+    id 'io.gitlab.arturbosch.detekt' version '1.23.4'
+    id 'io.snyk.gradle.plugin.snykplugin' version '0.5'
+    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'org.jlleitschuh.gradle.ktlint' version '12.1.0'
 }
 
 repositories {
     mavenCentral()
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
 
@@ -30,7 +32,7 @@ allprojects { project ->
     dependencyLocking {
         lockAllConfigurations()
     }
-    task resolveAndLockAll {
+    tasks.register('resolveAndLockAll') {
         doFirst {
             assert gradle.startParameter.writeDependencyLocks
         }
@@ -40,6 +42,15 @@ allprojects { project ->
                 it.canBeResolved
             }.each { it.resolve() }
         }
+    }
+}
+
+subprojects {
+    tasks.withType(Test).configureEach {
+        jvmArgs = jvmArgs + [
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.util=ALL-UNNAMED'
+        ]
     }
 }
 
